# LiDAR_based-MPC_CBF

./: README .md  README.md  empty_with_plugins.sdf
Examples_code/: robot_states_N8.npz  robot_trajectories_MPC_gamma.eps  simulation_code.py
ROS_bags/MPC_WCBF/: metadata.yaml
controller/: package.xml  setup.py
controller/controller/: MPC_CBF.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/controller/lib/controller/: MPC_controller
install/controller/share/controller/: package.sh
install/lidar_clustring/lib/lidar_clustring/: lidar_clustering_node
install/lidar_clustring/share/lidar_clustring/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/Examples_code/: MPC_Controller.py  robot_states_N6_gamma_02.npz  robot_trajectories_MPC.eps  simulation_paper.py
src/ROS_bags/MPC_CBF/: metadata.yaml
src/ROS_bags/MPC_CBF_gamma_05_N20_Experimental/: metadata.yaml
src/ROS_bags/MPC_CBF_gamma_08_N20_Experimental/: metadata.yaml
src/lidar_clustring/: setup.cfg  setup.py
src/lidar_clustring/lidar_clustring/: lidar_node.py  try.py
